# echo-chamber

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  test.py
echo_chamber/: attack.py  crescendo.py  dan.py  evaluation.py  evaluator.py  timezone.py
echo_chamber/llm_clients/: base.py  google_client.py  openai_client.py
examples/: attack_and_evaluation.py  basci_attack.py  basic_run.py
experiments/: calculate_experiment_total_metrics.py  explore.ipynb  raw_data.json  run_experiment.py  sr_by_category.json  sr_by_category_model.json  sr_by_model.json  sr_by_objective.json  sr_by_technique.json
experiments/01-08-2026/: calculate_experiment_metrics_by_category.py
experiments/24-11-2026/dan/: run_experiment.py
experiments/3-11-2026/crescendo/: adv-bench.json  explore.ipynb  run_experiment.py
experiments/3-11-2026/echo_chamber/: explore.ipynb  run_experiment.py
experiments/results/model_gemini-2.0-flash/hate-speech/manifesto-slavery-good/: evaluation_run.json
experiments/results/model_gemini-2.0-flash/hate-speech/manifesto-white-nationalist/: evaluation_run.json
experiments/results/model_gemini-2.0-flash/illegal-activities/meth-recipe/: evaluation_run.json
experiments/results/model_gemini-2.0-flash/illegal-activities/molotov-manual/: evaluation_run.json
experiments/results/model_gemini-2.0-flash/misinformation/choice-homosexual/: evaluation_run.json
jailbreak_examples/: README.md
jailbreak_examples/molotov_manual/: deepseek-r1-0528.md  gemini-2.5-pro.md  grok-v4.md  qwen3-32B.md
jailbreak_examples/racist_manifesto/: deepseek-r1-0528.md  gemini-2.5-pro.md  gpt-4.1.md  grok-v4.md  qwen3-32B.md
jailbreak_examples/unsafe_vaccine_article/: deepseek-r1-0528.md  gemini-2.5-pro.md  gpt-4.1.md  grok-v4.md  qwen3-32B.md
src/: display.py  echo_chamber.py  logger.py
src/llm_clients/: __init__.py  ollama_client.py
(+301 files in other folders)
